--- a/admin/classes/Config/Hospital.html
+++ b/admin/classes/Config/Hospital.html
@@ -28,7 +28,7 @@
 
 										   <table width="100%" border="0" style="line-height:20px;display:1none" id="main_panel" name="main_panel">
 											  <tr><td colspan="3" style="line-height:30px;">			  
-											    Tìm kiếm : {_keyword} {_selectkeyword}
+											    Tìm kiếm : {_keyword} {_selectkeyword} {_s_province_id} {_s_status}
 											 
 											  </td></tr>																							
 											  <tr><td colspan="3">			  
