--- a/admin/classes/Config/HospitalAdd.html
+++ b/admin/classes/Config/HospitalAdd.html
@@ -7,52 +7,37 @@
 				$('#create_date').datepick({showOnFocus: true, showTrigger: '' + '<img src="css/calendar/calendar.gif" alt="Popup" style="cursor:pointer;" align="absmiddle" >'});	
 			});
 </script>-->
-<form name="form2" id="form2" method="post">	
+<form name="form2" id="form2" method="post">
 			<input type="hidden" name="captcha" id="captcha"  value="{captchaTxt}" />	
 			<input type="hidden" name="no_body" id="no_body"  value="false" />	
 			<input type="hidden" name="page"  id="page"    value="1" />
-			<input type="hidden" name="formmode" id="formmode"         value="{formmode}" />
-			<input type="hidden" name="module"         value="HHConfig" />
-			<input type="hidden" name="action"         value="AbsentList" />
-			<input type="hidden" name="formaction" id="formaction"         value="ajax" />
+			<input type="hidden" name="formmode" id="formmode"         value="add" />
+			<input type="hidden" name="module"         value="Config" />
+			<input type="hidden" name="action"         value="Hospital" />
+			<input type="hidden" name="formaction" id="formaction"         value="add" />
 			<input type="hidden" name="Id" id="Id"         value="{Id}" />
 			<input type="hidden" name="token" id="token"         value="{token}" />
 			<input type="hidden" name="frm_input" id="frm_input"         value="{frm_input}" />
 			<table width="100%" border="0" cellspacing="2" cellpadding="2"  id="tblform">		  
 					<tr>
-						<td ><span class="require"></span>Mã</td>
-						<td >&nbsp;{_absent_list_code}
+						<td ><span class="require"></span>Tỉnh thành</td>
+						<td >&nbsp;{_province_id}
 						</td>
 					  </tr><tr>
-						<td ><span class="require"></span>Công ty</td>
-						<td >&nbsp;{_company_id}
+						<td ><span class="require"></span>Tên bệnh viện</td>
+						<td >&nbsp;{_name}
 						</td>
-					  </tr><tr>
-						<td ><span class="require"></span>Loại phép</td>
-						<td >&nbsp;{_absent_list_name}
-						</td>
-					  </tr><tr>
+					  </tr>
+					   <tr>
 						<td ><span class="require"></span>Trạng thái</td>
 						<td >&nbsp;{_status}
 						</td>
-					  </tr><tr>
-						<td ><span class="require"></span>Ngày tối đa</td>
-						<td >&nbsp;{_max_day}
-						</td>
-					  </tr><tr>
-						<td ><span class="require"></span>Ghi chú</td>
-						<td >&nbsp;{_note}
+					  </tr>
+					  <tr>
+						<td ><span class="require"></span>Thứ tự</td>
+						<td >&nbsp;{_order}
 						</td>
 					  </tr>
-						<tr>
-						<td valign=top><span class="require"></span></td>
-						<td >
-						&nbsp;<input type=text value="" name="captchaForm" style="width:198px" placeholder="Mã bảo mật"  autocomplete="off"><br>
-						&nbsp;<img src="captcha2/img.php?c=true" id="captchaImg" onclick="$('#dialog-form #preview_info2 #form2 #captchaImg').attr('src','captcha2/img.php?c=true&t='+timestamp())" style="border-style:solid;border-width:1px">
-
-						</td>
-					  </tr>					  
-					  
 					  </table>
 
 </form>
