add function management hospital on admin

--- a/admin/classes/Config/Hospital.html
+++ b/admin/classes/Config/Hospital.html
@@ -1,6 +1,6 @@
 <!-- BEGIN:main -->
-		<link rel="stylesheet" href="css/do.css" type="text/css">
-		<link rel="stylesheet" href="css/ui.achtung-min.css" type="text/css">
+		<link rel="stylesheet" href="../css/do.css" type="text/css">
+		<link rel="stylesheet" href="../css/ui.achtung-min.css" type="text/css">
 		<!--<script type="text/javascript" language="javascript" src="css/ui.achtung-min.js"></script>-->
 		
 		<!--<script type="text/javascript" src="css/fbc/fbc.js"></script>
@@ -35,6 +35,7 @@
 											  <input type=button value="TRA CỨU" onclick=" sbm_form(1)">	
 											  &nbsp;
 											  {_btnexport} {_btndelete}
+											  <input type=button value="Thêm" onclick="dg_add('Config','HospitalAdd',0,'','Thêm mới',400,300);">
 											 
 											  </td></tr>							
 											  <tr>
