--- a/admin/classes/Config/NewsAdd.html
+++ b/admin/classes/Config/NewsAdd.html
@@ -7,7 +7,32 @@
 				$('#create_date').datepick({showOnFocus: true, showTrigger: '' + '<img src="css/calendar/calendar.gif" alt="Popup" style="cursor:pointer;" align="absmiddle" >'});	
 			});
 </script>-->
-<form name="form2" id="form2" method="post">
+
+<script>
+	function AddFile(){
+		var html = '<tr><td ><span class="require"></span></td><td ><input type="file" name="filenew[]" id="filenew" /></td></tr>';
+		$('#tb_info_add').append(html);
+	}
+	function DelFile(id){		
+		if(id>0){
+			$.ajax({
+				type: "POST",					
+				url: "?module=Config&action=Ajax&formaction=ajax&no_body=true",
+				data: "tp=del_file&id="+id+"&token=",
+				success: function(msg){							 
+					var result = parseInt(msg);
+					if(msg==1){
+						$('#file_'+id).html('');
+					}else{
+						alert('Xóa file không thành công.');
+					}
+				}
+			});
+		}
+		
+	}
+</script>
+	<form name="form2" id="form2" method="post" enctype="multipart/form-data">
 			<input type="hidden" name="captcha" id="captcha"  value="{captchaTxt}" />	
 			<input type="hidden" name="no_body" id="no_body"  value="false" />	
 			<input type="hidden" name="page"  id="page"    value="1" />
@@ -18,7 +43,7 @@
 			<input type="hidden" name="Id" id="Id"         value="{Id}" />
 			<input type="hidden" name="token" id="token"         value="{token}" />
 			<input type="hidden" name="frm_input" id="frm_input"         value="{frm_input}" />
-			<table width="100%" border="0" cellspacing="2" cellpadding="2"  id="tblform">		  
+			<table id="tb_info_add" width="100%" border="0" cellspacing="2" cellpadding="2"  id="tblform">		  
 				<tr>
 					<td><span class="require"></span>Danh mục</td>
 					<td >&nbsp;{_menu_id}</td>
@@ -59,7 +84,43 @@
 					<td ><span class="require"></span>Trạng thái</td>
 					<td >&nbsp;{_status}</td>
 			    </tr>
-					  
+				<tr>
+					<td ><span class="require"></span>Danh sách tệp tin đính kèm:</td>
+					<td >
+						<!-- BEGIN: file -->
+						<div id="file_{file.id}">
+							<a href="{file.file_name}">{file.file_path}</a> &nbsp;&nbsp;<input type="button" name="btndel" onclick="DelFile({file.id});" value="Xóa"/>
+							<br/>
+						</div>
+						<!-- END: file -->
+					</td>
+			    </tr>
+				<tr>
+					<td ><span class="require"></span>Tải thêm tệp tin:</td>
+					<td >
+						<input type="file" name="filenew[]" id="filenew" />
+					</td>
+			    </tr>
+				<tr>
+					<td ><span class="require"></span></td>
+					<td >
+						<input type="file" name="filenew[]" id="filenew" />
+					</td>
+			    </tr>
+				<tr>
+					<td ><span class="require"></span></td>
+					<td >
+						<input type="file" name="filenew[]" id="filenew" />
+					</td>
+			    </tr>
+			</table>
+			<table>
+				<tr id="area_add_file">
+					<td style="width:200px;"><span class="require">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></td>
+					<td >
+						<input type="button" name="addFile" value="Thêm tệp tin" onclick="AddFile();"/>
+					</td>
+			    </tr>
 			</table>
 
 </form>
