--- a/admin/classes/Config/News.html
+++ b/admin/classes/Config/News.html
@@ -28,13 +28,13 @@
 
 										   <table width="100%" border="0" style="line-height:20px;display:1none" id="main_panel" name="main_panel">
 											  <tr><td colspan="3" style="line-height:30px;">			  
-											    Tìm kiếm : {_keyword} {_selectkeyword} {_s_province_id} {_s_status}											 
+											    Tìm kiếm : {_keyword} {_selectkeyword} {_category_id} {_status}											 
 											  </td></tr>																						
 											  <tr><td colspan="3">			  
 											  <input type=button value="TRA CỨU" onclick=" sbm_form(1)">	
 											  &nbsp;
 											  {_btnexport} {_btndelete}
-											  <input type=button value="Thêm" onclick="dg_add('Config','NewsAdd',0,'','Thêm mới',800,600);">
+											  <!--<input type=button value="Thêm" onclick="dg_add('Config','NewsAdd',0,'','Thêm mới',800,600);">-->
 											 </td></tr>						
 											  <tr>
 												<td colspan="3" style="text-align:center;color:#296D9C;font-weight:bold; height:40px;vertical-align:middle" class="mtitle"><b>{title}</b> </td>
