--- a/admin/classes/Login/LoginForm.html
+++ b/admin/classes/Login/LoginForm.html
@@ -1,10 +1,10 @@
 <!-- BEGIN:main -->
-<link rel="stylesheet" href="css/do.css" type="text/css">
+<link rel="stylesheet" href="../css/do.css" type="text/css">
 
-<script type="text/javascript" src="css/jquery.md5.js"></script>	
+<script type="text/javascript" src="../css/jquery.md5.js"></script>	
 <script type="text/javascript" language="javascript" src="css/ui.achtung-min.js"></script>
-<LINK rel=stylesheet type=text/css href="css/keyboard/keyboard.css">
-<SCRIPT type=text/javascript charset=UTF-8 src="css/keyboard/keyboard.js"></SCRIPT>
+<LINK rel=stylesheet type=text/css href="../css/keyboard/keyboard.css">
+<SCRIPT type=text/javascript charset=UTF-8 src="../css/keyboard/keyboard.js"></SCRIPT>
 <script>
 	$(function() {
 		$('#password').val('');
@@ -55,7 +55,7 @@
 			
 			<div id="login" class="ui-dialog-content ui-widget-content" height=250 style="height: 250px; min-height: 48px; width: auto;">
 								<form id="frmlogin" name="frmlogin" class="forms" method="post" 
-								action="do?module=Login&action=signin">
+								action="admin?module=Login&action=signin">
 								<div align=center style="display:none"><img src="images/logo.png"></div>
 								<ul>
 									<li>
