--- a/admin/classes/Config/PostComment.html
+++ b/admin/classes/Config/PostComment.html
@@ -24,20 +24,18 @@
 										<input type="hidden" name="page"  id="page"    value="1" />
 										<input type="hidden" name="mode_inpvl" id="mode_inpvl"         value="SEARCH" />
 										<input type="hidden" name="module"         value="Config" />
-										<input type="hidden" name="action" id="action"         value="AbsentList" />
+										<input type="hidden" name="action" id="action"         value="PostComment" />
 
 										   <table width="100%" border="0" style="line-height:20px;display:1none" id="main_panel" name="main_panel">
 											  <tr><td colspan="3" style="line-height:30px;">			  
-											    Tìm kiếm : {_keyword} {_selectkeyword} {_s_province_id} {_s_status}
-											 
-											  </td></tr>																							
+											    Tìm kiếm : {_keyword} {_selectkeyword} {_category_id} {_status}										 
+											  </td></tr>																						
 											  <tr><td colspan="3">			  
 											  <input type=button value="TRA CỨU" onclick=" sbm_form(1)">	
 											  &nbsp;
-											  {_btnexport} {_btndelete}
-											  <!--<input type=button value="Thêm" onclick="dg_add('Config','HospitalAdd',0,'','Thêm mới',400,300);">-->
-											 
-											  </td></tr>							
+											  {_btnexport} {_btndelete} {_btnactive} {_btninactive}
+											  <!--<input type=button value="Thêm" onclick="dg_add('Config','PostAdd',0,'','Thêm mới',800,600);">-->
+											 </td></tr>						
 											  <tr>
 												<td colspan="3" style="text-align:center;color:#296D9C;font-weight:bold; height:40px;vertical-align:middle" class="mtitle"><b>{title}</b> </td>
 												</tr>
