--- a/admin/classes/Config/NewsAdd.html
+++ b/admin/classes/Config/NewsAdd.html
@@ -63,7 +63,7 @@
 					<div id="tabs" class="ui-tabs ui-widget ui-widget-content ui-corner-all">
 							{tabs}		
 								
-								<form name="form1" id="form1" method="post">
+								<form name="form1" id="form1" method="post" enctype="multipart/form-data">
 
 								<div id="main_tabs" class="ui-tabs-panel ui-widget-content ui-corner-bottom ">
 								<input type="hidden" name="Id" id="Id"         value="{Id}" />
